<resources>
    <string name="app_name">Eventhub</string>
    <string name="menuSettings">Settings</string>
    <string name="menuProfile">My Profile</string>
    <string name="menuSignOut">Sign Out</string>


    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="manage_acc">Manage my Profile</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Eventhub are a team of like-minded people, specialized in development of Android App Development through BSc in Software Systems Development creating new trends across the app space. Glad to Help in anyway!!</string>
    <string name="app_version">1.0</string>
    <string name="delete_acc">Delete this account</string>
    <string name="summary_support">Report technical issues, suggest new features or general feedback about the app</string>
    <string name="signout_summary">Sign out of Eventhub!</string>
    <string name="signout">Sign Out</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_delete">Delete Account</string>
    <string name="headind3">Learn more</string>
    <string name="headind2">Get in touch with us</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="feedback">Feedback</string>
    <string name="manage_title">My Profile</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_signout">key_signout</string>
    <string name="key_delete_account">key_delete_account</string>
    <string name="key_goto_profile">key_goto_profile</string>


    <!-- action bar button strings -->
    <string name="actionbarProfile"></string>
    <string name="actionbarMain">1.0</string>

    <string name="numberOfAttempts">Number of attempts: 5</string>

    <string name="forgotPassText">Please enter the email address you signed up with below, Once you click send email, we will send
    you an email with a link to reset the password. Make sure you enter the Email Address correctly</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="dialog_title">Flag this user</string>
    <string name="ok_label">Submit</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>

    <string-array name="reasons_item">
        <item>Feels like a spam</item>
        <item>Inappropriate Content</item>
        <item>This account is fake</item>
        <item>Threatening/Unsafe</item>
        <item>Bullying</item>
        <item>Other</item>
        <item>No reason</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
